# lolama

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
benchmarks/: run_bench.py
lolama/: cli.py
lolama/data/: __init__.py  loader.py  registry.py  vlm_loader.py  weight_mappings.py
lolama/metal/: __init__.py  benchmark.py
lolama/model/: generation_config.py  generator.py  kv_cache.py  layers.py  llava.py  quantize.py
lolama/protocols/: model.py
lolama/vision/: clip.py  processor.py
scripts/: download.py  generate.py  quantize_test.py  test_model.py  validate_fix.py
scripts/debug/: debug_compare.py  debug_layer.py
src/: __init__.py
src/data/: __init__.py  loader.py
src/model/: __init__.py  config.py  layers.py  llama.py
src/utils/: __init__.py  quantize.py  rope.py
tests/: conftest.py  test_generation_config.py  test_llava.py  test_loader.py  test_parity.py  test_quantize.py
