[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lolama"
version = "0.1.0"
description = "LLaMA from scratch in PyTorch"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ahmed Abouzeid"}
]
keywords = ["llama", "pytorch", "llm", "transformer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=5.0.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "Pillow>=9.0.0",
    "safetensors>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
lolama = "lolama.cli:main"

[project.urls]
Homepage = "https://github.com/AAbouzeid/lolama"
Repository = "https://github.com/AAbouzeid/lolama"

[tool.setuptools.packages.find]
include = ["lolama*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name (we use l, O, I in math code)
    "F811",   # redefinition — used intentionally with type annotations
    "F841",   # local variable assigned but never used — common in unpacking
    "W291",   # trailing whitespace
    "W293",   # whitespace before ':'
    "E303",   # too many blank lines
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "lolama.cli",
    "lolama.data.loader",
    "lolama.data.registry",
    "lolama.data.vlm_loader",
    "lolama.model.layers",
    "lolama.model.llama",
    "lolama.model.quantize",
    "lolama.vision.clip",
]
ignore_errors = true
